# motif

./: .clang-tidy  BUILD.md  CLAUDE.md  CMakeLists.txt  Doxyfile  aclocal.m4  configure
.claude/: settings.json
.github/workflows/: ci.yml
bindings/: Makefile.in
bitmaps/: Makefile.in
clients/uil/: Makefile.in
clients/xmbind/: Makefile.in
cmake/: MotifConfig.cmake.in  motif.pc.in
config/: Makefile.in
demos/: Makefile.in
demos/doc/: Makefile.in
demos/doc/programGuide/: Makefile.in
demos/doc/programGuide/ch16/: Makefile.in
demos/programs/: Makefile.in
demos/programs/ButtonBox/: Makefile.in
demos/programs/Column/: Makefile.in
demos/programs/Combo2/: Makefile.in
demos/programs/Outline/: Makefile.in
demos/programs/Paned/: Makefile.in
demos/programs/TabStack/: Makefile.in
demos/programs/animate/: Makefile.in
demos/programs/drag_and_drop/: Makefile.in
demos/programs/earth/: Makefile.in
demos/programs/panner/: Makefile.in
demos/programs/pixmaps/: Makefile.in
demos/programs/popups/: Makefile.in
demos/programs/sampler2_0/: Makefile.in
demos/programs/todo/: Makefile.in
demos/programs/tooltips/: Makefile.in
demos/programs/workspace/: Makefile.in
demos/unsupported/: Makefile.in
demos/unsupported/aicon/: Makefile.in
demos/unsupported/dogs/: Makefile.in
demos/unsupported/uilsymdump/: Makefile.in
demos/unsupported/xmapdef/: Makefile.in
demos/unsupported/xmfonts/: Makefile.in
demos/unsupported/xmform/: Makefile.in
doc/man/: Makefile.in
doc/man/man1/: Makefile.in
doc/man/man4/: Makefile.in
docs/: architecture.md  migration-guide.md
examples/: CMakeLists.txt
examples/dialogs/: main.cpp
examples/form_layout/: main.cpp
examples/hello_motif/: main.cpp
examples/menus/: main.cpp
examples/quickstart/: main.cpp
examples/text_editor/: main.cpp
examples/themes/: main.cpp
include/: config.h.in
include/Dt/: Makefile.in
include/motif/: Builder.h  Version.h  Xm.h
include/motif/clipboard/: CutPaste.h  Transfer.h
include/motif/containers/: BulletinBoard.h  Container.h  Form.h  Frame.h  MainWindow.h  Notebook.h  PanedWindow.h  RowColumn.h  ScrolledWindow.h  TabStack.h
include/motif/core/: Accessibility.h  Application.h  CompoundString.h  Error.h  FontRenderer.h  Gadget.h  HiDPI.h  InputMethod.h  Log.h  Manager.h  Primitive.h  Resource.h  Shell.h  Theme.h  TypeRegistry.h  Widget.h
include/motif/dialogs/: Command.h  DialogShell.h  FileSelectionBox.h  MessageBox.h  SelectionBox.h
include/motif/dnd/: DragContext.h  DragIcon.h  DropSiteManager.h  DropTransfer.h
include/motif/graphics/: Color.h  Draw.h  ImageCache.h  Pixmap.h
include/motif/input/: KeyBinding.h  Traversal.h  VirtualKey.h
include/motif/menus/: MenuBar.h  MenuShell.h  PopupMenu.h
include/motif/mrm/: ResourceLoader.h
include/motif/print/: PrintContext.h
include/motif/widgets/: ArrowButton.h  CascadeButton.h  ComboBox.h  DrawnButton.h  Label.h  List.h  PushButton.h  Scale.h  ScrollBar.h  Separator.h  Text.h  TextField.h  ToggleButton.h
legacy/: Makefile.in
legacy/clients/: Makefile.in
legacy/clients/mwm/: Makefile.in
legacy/clients/uil/: UilLexPars.c
legacy/config/util/: Makefile.in
legacy/demos/lib/: Makefile.in
legacy/doc/: Makefile.in
legacy/include/: Makefile.in
legacy/lib/: Makefile.in
legacy/lib/Mrm/: Makefile.in
legacy/localized/util/: Makefile.in
legacy/tools/wml/: Makefile.in  wmllex.c  wmlparse.c
lib/Xm/: Makefile.in
localized/: Makefile.in
mrm/: CMakeLists.txt
mrm/include/motif/mrm/: ResourceManager.h
mrm/src/: Hierarchy.cpp  Hierarchy.h  ResourceManager.cpp  WidgetFactory.cpp  WidgetFactory.h
resources/: Motif-dark.defaults  Motif.defaults
src/: CMakeLists.txt
src/clipboard/: CutPaste.cpp  Transfer.cpp
src/containers/: BulletinBoard.cpp  Container.cpp  Form.cpp  Frame.cpp  MainWindow.cpp  Notebook.cpp  PanedWindow.cpp  RowColumn.cpp  ScrolledWindow.cpp  TabStack.cpp
src/core/: Accessibility.cpp  Application.cpp  CompoundString.cpp  Error.cpp  FontRenderer.cpp  Gadget.cpp  HiDPI.cpp  InputMethod.cpp  Log.cpp  Manager.cpp  Primitive.cpp  Resource.cpp  Shell.cpp  Theme.cpp  TypeRegistry.cpp  Widget.cpp
src/dialogs/: Command.cpp  DialogShell.cpp  FileSelectionBox.cpp  MessageBox.cpp  SelectionBox.cpp
src/dnd/: DragContext.cpp  DragIcon.cpp  DropSiteManager.cpp  DropTransfer.cpp
src/graphics/: Color.cpp  Draw.cpp  ImageCache.cpp  Pixmap.cpp
src/input/: KeyBinding.cpp  Traversal.cpp  VirtualKey.cpp
src/menus/: MenuBar.cpp  MenuShell.cpp  PopupMenu.cpp
src/mrm/: ResourceLoader.cpp
src/print/: PrintContext.cpp
src/widgets/: ArrowButton.cpp  CascadeButton.cpp  ComboBox.cpp  DrawnButton.cpp  Label.cpp  List.cpp  PushButton.cpp  Scale.cpp  ScrollBar.cpp  Separator.cpp  Text.cpp  TextField.cpp  ToggleButton.cpp
tests/: CMakeLists.txt
tests/containers/: BulletinBoardTest.cpp  FormTest.cpp  FrameTest.cpp  NotebookTest.cpp  PanedWindowTest.cpp  RowColumnTest.cpp  TabStackTest.cpp
tests/core/: CompoundStringTest.cpp  GadgetTest.cpp  LogTest.cpp  ManagerTest.cpp  PrimitiveTest.cpp  ResourceTest.cpp  WidgetTest.cpp
tests/dialogs/: CommandTest.cpp  FileSelectionBoxTest.cpp  MessageBoxTest.cpp  SelectionBoxTest.cpp
tests/dnd/: DragContextTest.cpp  DropSiteManagerTest.cpp
tests/mock/: MockDisplay.cpp  MockDisplay.h
tests/mrm/: ResourceLoaderTest.cpp
tests/uil/: CompilerTest.cpp
tests/widgets/: ComboBoxTest.cpp  LabelTest.cpp  ListTest.cpp  PushButtonTest.cpp  ScaleTest.cpp  ScrollBarTest.cpp  TextTest.cpp  ToggleButtonTest.cpp
tools/: Makefile.in
tools/wml/: wmluiltok.c
uil/: CMakeLists.txt
uil/include/motif/uil/: AST.h  Compiler.h  Lexer.h  Parser.h  SymbolTable.h  Token.h
uil/src/: Compiler.cpp  Lexer.cpp  Parser.cpp  SymbolTable.cpp  main.cpp
wm/: CMakeLists.txt
wm/include/motif/wm/: ConfigParser.h  Decoration.h  EWMH.h  EventHandler.h  KeyFocus.h  Menu.h  SessionManager.h  WindowManager.h
wm/src/: ConfigParser.cpp  Decoration.cpp  EWMH.cpp  EventHandler.cpp  KeyFocus.cpp  Menu.cpp  SessionManager.cpp  WindowManager.cpp  main.cpp
(+58 files in other folders)
